Fix layout shifts

--- a/src/index.css
+++ b/src/index.css
@@ -9,3 +9,9 @@
 body {
     @apply text-white bg-surface-dark;
 }
+
+td,
+th,
+tr {
+    @apply whitespace-nowrap overflow-hidden text-ellipsis h-14 text-center;
+}
